# wow

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BL  Dockerfile  README.md  Taskfile.yaml  WowBl.md  WowBl_Step8_Domain.md  alembic.ini  docker-compose.yml  models.py  mypy.ini  pyproject.toml
config/: base.yaml  local.yaml  test.yaml
docs/: 2026-03-14_backend-foundation_docker-task_alembic.md  WowBl_ForClient_Clean.md  WowBl_ServicePage_AdminFlow.md  WowBl_Step10_Architecture.md  WowBl_Step8_DataModel.md  WowBl_Step8_Domain.md  WowBl_Step9_API.md
migrations/: README.md  env.py
migrations/versions/: 1c7a9f4d2e11_add_public_promotion_scope_unique_indexes.py  5805f3f173f4_add_catalog_games_and_scope_categories_by_game.py  6b2c4cb08c11_refactor_lot_options_to_section_blocks.py  87b2e76f5f71_add_created_updated_by_mixins_columns.py  9d7c1a2b3f44_add_deleted_status_and_deleted_at_for_.py  a1f4c3d9b2e1_add_slug_to_catalog_service_lots.py  b4d9f2e7a1c0_convert_lot_prices_to_numeric_decimal.py  ba9390fe80ac_init_schema.py  c3a9f98b1d2e_replace_lot_is_active_with_status.py  f6e4b3a8c2d1_replace_game_category_is_active_with_status.py
tests/: conftest.py
tests/api/: test_smoke.py
tests/api/catalog/: test_public_lots_routes.py  test_staff_lot_options_page_flows.py  test_staff_lots_routes.py
tests/api/pricing/: test_personal_promotion_assignments.py  test_public_promotions_context_route.py  test_staff_promotions_admin_flows.py
tests/helpers/: auth.py
wow_shop/: __init__.py  app.py  run.py
wow_shop/api/: __init__.py  dev_routes.py  exception_handlers.py  responses.py  router.py
wow_shop/api/dependencies/: __init__.py  app.py  auth.py  permissions.py  token.py
wow_shop/core/: config.py  config_loader.py  db.py  errors.py
wow_shop/infrastructure/: __init__.py
wow_shop/infrastructure/db/: __init__.py  base.py  mixins.py  models.py  session.py  types.py  validators.py
wow_shop/infrastructure/security/: __init__.py  jwt_manager.py  redis_refresh_token_store.py  refresh_token_store.py  token_errors.py  token_payloads.py  token_service.py
wow_shop/modules/auth/: constants.py
wow_shop/modules/auth/api/: __init__.py  routes.py
wow_shop/modules/catalog/: constants.py
wow_shop/shared/auth/: __init__.py  context.py
wow_shop/shared/contracts/: __init__.py  http.py  models.py
wow_shop/shared/pydantic/: __init__.py  partial.py
wow_shop/shared/types/: __init__.py  int.py
wow_shop/shared/utils/: __init__.py  missing.py
wowshop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+79 files in other folders)
