[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wowshop"
version = "0.1.0"
description = "WowShop backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "PyJWT>=2.10.0,<3.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "redis>=5.2.0,<6.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0,<26.0.0",
  "flake8>=7.1.0,<8.0.0",
  "httpx>=0.28.0,<1.0.0",
  "isort>=5.13.0,<6.0.0",
  "mypy>=1.15.0,<2.0.0",
  "pre-commit>=4.2.0,<5.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.black]
line-length = 80
target-version = ["py312"]

[tool.isort]
line_length = 80
force_grid_wrap = 2
combine_as_imports = true
multi_line_output = 3
length_sort = true
known_first_party = ["wow_shop"]
skip = ["wow_shop/_local.py", ".venv", "__init__.py"]

# Placeholder for project-specific patterns if needed later.
skip_glob = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["wow_shop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
  "regression_catalog_promotions: fast regression pack for catalog + promotions critical flows",
]
